# adam-gui

./: .gitignore  README.md  capture_screenshots.py  pyproject.toml  requirements.txt  run.py
adam_gui/: __init__.py  app.py  constants.py  main_window.py  qt_compat.py
adam_gui/models/: __init__.py  enums.py  genetic_data.py  parameters.py  pedigree.py  project.py  results.py
adam_gui/services/: adam_runner.py  comparison.py  demo_data.py  file_formats.py  output_parser.py  param_writer.py  pca_compute.py  project_io.py
adam_gui/tests/: conftest.py  test_demo_data.py  test_parameters.py  test_pca_compute.py  test_pedigree.py  test_services.py
adam_gui/themes/: dark.qss  light.qss  theme_manager.py
adam_gui/views/charts/: __init__.py  accuracy_chart.py  allele_freq_chart.py  comparison_chart.py  genetic_gain_chart.py  inbreeding_chart.py  variance_chart.py
adam_gui/views/parameter_editor/: __init__.py  advanced_panel.py  breeding_panel.py  editor_view.py  founder_panel.py  genetic_model_panel.py  output_panel.py  propagation_panel.py  selection_panel.py  summary_panel.py  trait_panel.py
adam_gui/views/result_viewer/: __init__.py  breeding_values_tab.py  comparison_tab.py  genotype_tab.py  pedigree_tab.py  population_tab.py  summary_tab.py  viewer_view.py
adam_gui/vtk_pipelines/: chromosome_pipeline.py  common.py  pedigree_pipeline.py  scatter_pipeline.py  surface_pipeline.py
adam_gui/widgets/: chart_widget.py  collapsible_section.py  data_table.py  file_picker.py  loading_overlay.py  range_slider.py  search_bar.py  status_indicator.py  vtk_widget.py
(+8 files in other folders)
